<resources>
    <string name="app_name">Notes f107660</string>
    <string name="title">Title</string>
    <string name="note">Enter note here</string>
    <string name="insert_into_database">Insert note</string>
    <string name="please_write_your_name">Моля, напишете Вашето име!</string>
    <string name="save_into_database">Save</string>
    <string name="note_saved">Note saved!</string>
    <string name="delete_into_database">Delete</string>
    <string name="note_deleted">Note deleted!</string>

    <string name="speech_toggle_on">START SPEAKING</string>
    <string name="speech_toggle_off">STOP SPEAKING</string>

    <string name="start_speaking">Okay! I will read your messages out loud for you now.</string>
    <string name="stop_speaking">Okay! I will stay silent now.</string>
</resources>
