<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <EditText
        android:id="@+id/edit_title_fragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_content_fragment"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:hint="@string/note"
        android:importantForAutofill="no"
        android:gravity="top"
        android:inputType="text|textMultiLine" />

    <Button
        android:id="@+id/insert_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_into_database" />
    <Button
        android:id="@+id/delete_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_into_database" />
    </LinearLayout>
</FrameLayout>